zmiana wyglądu strony głównej

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -9,6 +9,37 @@
 <body>
     <div layout:fragment="content" class="container">
 
+        <div class="row row-cols-1 row-cols-sm-2">
+            <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <img src="https://pehkkw.ch.files.1drv.com/y4muxeaNpoJz-ILuHG-1AwPz2sUN-zN6vmaoPHFwe24M0ZgZ5xrxfU8XxpR7ANJ1Lom-p8XP_bCIeoRib6qacOJzBA1ZOQkX0WlbBNOccJD7V38GjEizFoiqAR1CzqbL_OtiXJmWz5TWjCmQvqMAto6IDPwWpsZNf0xBAfEBC-kwrPqVvVr6DR4um6oROlMjnPwSVUD7xhgtRPOb6pBhZJJ9A/Poland_20_Zlotych_201a_2018.jpg?psid=1" style="max-width: 100%; max-height: 350px"/>
+            </div>
+            <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <img src="https://pehkkw.ch.files.1drv.com/y4mPUbTFUvHbOBFzyXzwYt9vmStv09xK42uSKR9Yf-WqCius38bsURQs6oUC3Yy_MoNzxlsr6oXrUTm33vcC0NsZW3yxDs84VpdiWwJ4mdC_9cxlEFc_2uS1XqFCautZuLeQ6F_iZjih6rSp_-sqLE19BxKQu61mMgPnTL64VfbvKxKYR71h3ujRfU63e9n0OTt6mAF_nxZPu_5j0ZqQQWCqA/Poland_20_Zlotych_201b_2018.jpg?psid=1" style="max-width: 100%; max-height: 350px"/>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+               <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                   Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
+                   Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
+                   tellus odio aliquam neque, dictum iaculis quam lacus at justo. Cras sem ipsum,
+                   tempor vel nulla quis, tristique aliquet lacus. Duis dignissim. </span>
+            </div>
+            <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                   Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
+                   Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
+                   tellus odio aliquam neque, dictum iaculis quam lacus at justo. Cras sem ipsum,
+                   tempor vel nulla quis, tristique aliquet lacus. Duis dignissim. </span>
+            </div>
+            <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                   Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
+                   Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
+                   tellus odio aliquam neque, dictum iaculis quam lacus at justo. Cras sem ipsum,
+                   tempor vel nulla quis, tristique aliquet lacus. Duis dignissim. </span>
+            </div>
+        </div>
 
 
         <!-- Button trigger modal -->
