--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -19,6 +19,7 @@
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <h3>Note</h3>
                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
                    Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
@@ -26,6 +27,7 @@
                    tempor vel nulla quis, tristique aliquet lacus. Duis dignissim. </span>
             </div>
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <h3>Coin</h3>
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
                    Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
@@ -33,6 +35,7 @@
                    tempor vel nulla quis, tristique aliquet lacus. Duis dignissim. </span>
             </div>
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                <h3>Other</h3>
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    Vestibulum turpis enim, tempus venenatis sodales a, auctor ut lorem.
                    Cras maximus ornare condimentum. Aenean vehicula, leo eu feugiat vehicula,
