--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,7 +3,7 @@
         xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
         xmlns:th="http://thymeleaf.org">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light pt-1 pb-1">
+    <nav class="navbar navbar-expand-lg navbar-light pt-1 pb-1" style="background-color: #949ca2">
         <a class="navbar-brand" th:href="@{/}">HOME</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
