--- a/src/main/resources/templates/layouts/logo.html
+++ b/src/main/resources/templates/layouts/logo.html
@@ -1,6 +1,6 @@
 <header th:fragment="logo"
         xmlns:th="http://www.thymeleaf.org">
-    <div style="text-align: center; background-color: burlywood">
-        <span style="font-size: xx-large">PECUNIA</span>
+    <div style="text-align: center; background-color: #bdb8b8">
+        <span style="font-size: xx-large; font-family: initial">PECUNIA</span>
     </div>
 </header>
