--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -97,8 +97,8 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <div sec:authorize="isAuthenticated()" style="text-align: center;">
+                <div class="modal-header" style="background: darkgray; padding: 8px 8px 8px 8px">
+                    <div sec:authorize="isAuthenticated()" >
                         <h1 class="modal-title" id="exampleModalLabel" sec:authentication="principal.authorities[0]">Roles</h1>
                     </div>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -113,8 +113,8 @@
                         <span>Mail - </span><span sec:authentication="principal.email">email</span><br>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <div class="modal-footer" style="background: darkgray; padding: 0">
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
                     <!--                    <button type="button" class="btn btn-primary">Save changes</button>-->
                 </div>
             </div>
