--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -51,6 +51,7 @@
                         <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
                         <a class="dropdown-item" th:href="@{/active}">Active</a>
                         <a class="dropdown-item" th:href="@{/pattern}">Pattern</a>
+                        <a class="dropdown-item" th:href="@{/bought}">Bought</a>
                     </div>
                 </li>
 <!--                <li class="nav-item">-->
