--- a/src/main/resources/templates/bought/index.html
+++ b/src/main/resources/templates/bought/index.html
@@ -28,7 +28,7 @@
                     <td th:text="${bought.fullName}" class="pt-1 pb-1"></td>
                     <td th:text="${bought.description}" class="pt-1 pb-1"></td>
                     <td class="pt-1 pb-1">
-<!--                        <a th:href="@{'/active/edit/' + ${bought.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                        <a th:href="@{'/bought/edit/' + ${bought.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
 <!--                        <a th:href="@{'/active/delete/' + ${bought.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">Delete</a>-->
                     </td>
                 </tr>
