--- a/src/main/resources/templates/bought/index.html
+++ b/src/main/resources/templates/bought/index.html
@@ -17,7 +17,7 @@
                 <th>Name</th>
                 <th>Full Name</th>
                 <th>Desctiption</th>
-                <th>Action</th>
+                <th style="min-width: 100px">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -29,7 +29,7 @@
                     <td th:text="${bought.description}" class="pt-1 pb-1"></td>
                     <td class="pt-1 pb-1">
                         <a th:href="@{'/bought/edit/' + ${bought.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
-<!--                        <a th:href="@{'/active/delete/' + ${bought.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">Delete</a>-->
+                        <a th:href="@{'/bought/delete/' + ${bought.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">Delete</a>
                     </td>
                 </tr>
             </Block>
