--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -13,6 +13,9 @@
         <div th:replace="fragments/_flag :: flag(country = ${currency.countries.countryEn})"></div>
         <H3>Ilość banknotów - [[${notes.size}]]</H3>
         <div class="container">
+            <a th:href="@{'/note/new/?curId=' + ${currency.id}}" class="btn btn-sm btn-primary">Add new Note</a>
+        </div>
+        <div class="container">
             <table class="table table-striped table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                 <tr>
@@ -32,7 +35,7 @@
                         <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
                         <td th:text="${i.index +1}"></td>
                         <td th:text="${note.id}"></td>
-                        <td th:text="${note.denomination}"></td>
+                        <td th:text="${#numbers.formatDecimal(note.denomination,1,2)}"></td>
                         <td th:text="${note.nameCurrency}"></td>
                         <td th:text="${note.status}"></td>
                         <td class="p-0 m-0" style="width: 100px">
