--- a/src/main/resources/templates/note/_form.html
+++ b/src/main/resources/templates/note/_form.html
@@ -75,94 +75,40 @@
                     <option th:value="'set'" th:text="set"></option>
                 </select>
             </div>
-        </div>
 
+        </div>
+        <div class="col-auto">
+            <label class="m-0">Active</label>
+            <select class="form-control form-control-sm mb-2" th:field="*{actives.id}">
+                    <span th:if="*{actives.id == null}">
+                        <option value="">SELECT ACTIVE</option>
+                    </span>
+                <option th:each="active : ${actives}"
+                        th:value="${active.id}"
+                        th:text="${active.name}">
+                </option>
+            </select>
+            <div th:if="${#fields.hasErrors('actives.id')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{actives.id}" ></span>
+            </div>
+        </div>
     </div>
 
+    <div class="form-row align-items-center">
+        <div class="col-auto">
+            <label class="m-0">Price Buy</label>
+            <input class="form-control form-control-sm mb-2" type="number" step="0.01"  th:field="*{priceBuy}" placeholder="0.00">
+            <div th:if="${#fields.hasErrors('priceBuy')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{priceBuy}" ></span>
+            </div>
+        </div>
+        <div class="col-auto">
+            <label class="m-0">Price Sell</label>
+            <input class="form-control form-control-sm mb-2" type="number" step="0.01"  th:field="*{priceSell}" placeholder="0.00">
+            <div th:if="${#fields.hasErrors('priceSell')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{priceSell}" ></span>
+            </div>
+        </div>
+    </div>
 
-
-    <table>
-        <tr>
-            <td>
-
-<!--                <div th:if="${#fields.hasErrors('continents.id')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{continents.id}" ></span>-->
-<!--                </div>-->
-            </td>
-
-<!--            <td>-->
-<!--                <label>Continent</label><br>-->
-<!--                <input class="input" type="text" th:field="*{continent}" placeholder="Continent"/>-->
-<!--            </td>-->
-        </tr>
-        <tr>
-            <td>
-
-            </td>
-            <td>
-                <div class="form-group">
-
-                </div>
-            </td>
-<!--            <td>-->
-<!--                <label>Country Pl</label><br>-->
-<!--                <input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/>-->
-<!--                <div th:if="${#fields.hasErrors('countryPl')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{countryPl}" ></span>-->
-<!--                </div>-->
-<!--            </td>-->
-<!--            <td>-->
-<!--                <label>Capital City</label><br>-->
-<!--                <input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/>-->
-<!--                <div th:if="${#fields.hasErrors('capital_city')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{capital_city}" ></span>-->
-<!--                </div>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <label>Alfa 2</label><br>-->
-<!--                <input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/>-->
-<!--                <div th:if="${#fields.hasErrors('alfa_2')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{alfa_2}" ></span>-->
-<!--                </div>-->
-<!--            </td>-->
-<!--            <td>-->
-<!--                <label>Alfa 3</label><br>-->
-<!--                <input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/>-->
-<!--                <div th:if="${#fields.hasErrors('alfa_3')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{alfa_3}" ></span>-->
-<!--                </div>-->
-<!--            </td>-->
-<!--        <tr>-->
-
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <label>Numeric Code</label><br>-->
-<!--                <input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/>-->
-<!--                <div th:if="${#fields.hasErrors('numeric_code')}"  class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >-->
-<!--                    <span th:errors="*{numeric_code}" ></span>-->
-<!--                </div>-->
-<!--            </td>-->
-<!--            <td>-->
-<!--                <label>ISO Code</label><br>-->
-<!--                <input class="input" type="text" th:field="*{iso_code}" placeholder="iso code"/>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <label>Exist</label><br>-->
-<!--                <input class="input" type="checkbox" th:field="*{exists}" placeholder="exist"/>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <label>Description</label><br>-->
-<!--                <div>-->
-<!--                    <textarea class="input" th:field="*{description}" placeholder="Description"></textarea>-->
-<!--                </div>-->
-<!--            </td>-->
-        </tr>
-    </table>
 </header>
