--- a/src/main/resources/templates/note/_form.html
+++ b/src/main/resources/templates/note/_form.html
@@ -68,7 +68,7 @@
                 <label class="m-0" for="itemDate">Quantity</label>
                 <input type="number" class="form-control form-control-sm mb-2" id="quality" th:field="*{quantity}" min="0" placeholder="quantity">
                 <div th:if="${#fields.hasErrors('quantity')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
-                    <span th:errors="*{quantity}" ></span>
+                    <span th:errors="*{quantity}" style="display: inline-block; font-size: xx-small" ></span>
                 </div>
             </div>
             <div style="float:left; max-width: 100px">
@@ -124,9 +124,11 @@
         </div>
         <div class="col-auto">
             <label class="m-0">Quality</label>
-            <input class="form-control form-control-sm mb-2" type="text"  th:field="*{quality}">
-            <div th:if="${#fields.hasErrors('quality')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
-                <span th:errors="*{quality}" ></span>
+            <select class="form-control form-control-sm mb-2" th:field="*{quality}">
+                <option th:value="'Będzei Stan Intemu SELECT'" th:text="UNC"></option>
+            </select>
+            <div th:if="${#fields.hasErrors('quality')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px">
+                <span th:errors="*{quality}"></span>
             </div>
         </div>
     </div>
@@ -144,6 +146,53 @@
             <div th:if="${#fields.hasErrors('height')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
                 <span th:errors="*{height}" ></span>
             </div>
+        </div>
+        <!--        TODO Dodać seleckta do making utwożć nową tabele Status   -->
+        <div class="col-auto">
+            <label class="m-0">Status</label>
+            <select class="form-control form-control-sm mb-2" th:field="*{status}">
+                <option th:value="'Będzei status Banknotu SELECT'" th:text="KOLEKCJA"></option>
+            </select>
+            <div th:if="${#fields.hasErrors('status')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{making}" ></span>
+            </div>
+        </div>
+        <!--        TODO Dodać seleckta do making utwożć nową tabele Imaget Type   -->
+        <div class="col-auto">
+            <label class="m-0">Making</label>
+            <select class="form-control form-control-sm mb-2" th:field="*{imgType}">
+                <option th:value="'Będzei rodzaj obrazka SELECT'" th:text="SCAN"></option>
+            </select>
+            <div th:if="${#fields.hasErrors('imgType')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{imgType}" ></span>
+            </div>
+        </div>
+        <div class="col-auto">
+            <label class="m-0">Status Sell</label>
+            <input class="form-control form-control-sm mb-2" type="text" th:field="*{statusSell}">
+        </div>
+        <div class="col-auto" style="text-align: center;background: darkcyan;">
+            <label class="m-0">Visible</label><br>
+            <input lass="form-control form-control-sm mb-2" type="checkbox" th:field="*{visible}" placeholder="visible"/>
+        </div>
+    </div>
+
+    <div class="form-row align-items-center">
+        <div class="col">
+            <label class="m-0">Description</label>
+            <textarea class="input form-control form-control-sm mb-4" rows="6" style="max-width: 400px; resize: none" th:field="*{description}" placeholder="Description"></textarea>
+        </div>
+    </div>
+    <div class="form-row align-items-center">
+        <div class="col">
+            <label class="m-0" for="aversPath">Avers Patch</label>
+            <input type="text" class="form-control form-control-sm mb-2" id="aversPath" th:field="*{aversPath}" placeholder="Avers Path">
+        </div>
+    </div>
+    <div class="form-row align-items-center">
+        <div class="col">
+            <label class="m-0" for="reversePath">Reverse Patch</label>
+            <input type="text" class="form-control form-control-sm mb-2" id="reversePath" th:field="*{reversePath}" placeholder="Reverse Path">
         </div>
     </div>
 
