--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -17,7 +17,7 @@
                     <strong>Date Buy: </strong>
                     <span th:text="${note.dateBuy}"></span><br>
                     <strong>Bought: </strong>
-                    <span th:text="${note.bought}"></span><br>
+                    <span th:text="${note.boughts.name}"></span><br>
                     <strong>Visible: </strong>
                     <span th:text="${note.visible}"></span><br>
                     <strong>Created: </strong>
@@ -42,8 +42,8 @@
                     <strong>Quantity: </strong>
                     <span th:text="${note.quantity}"></span>
                     <span th:text="${note.unitQuantity}"></span><br>
-                    <strong> Signature Code: </strong>
-                    <span th:text="${note.signatureCode}"></span>
+                    <strong> Actives: </strong>
+                    <span th:text="${note.actives.name}"></span>
                 </div>
                 <div class="col field" style="float: left">
                     <strong>Width: </strong>
