Dodano edycję note dopracować resztę

--- a/src/main/resources/templates/note/_form.html
+++ b/src/main/resources/templates/note/_form.html
@@ -159,7 +159,7 @@
         </div>
         <!--        TODO Dodać seleckta do making utwożć nową tabele Imaget Type   -->
         <div class="col-auto">
-            <label class="m-0">Making</label>
+            <label class="m-0">Image Typ</label>
             <select class="form-control form-control-sm mb-2" th:field="*{imgType}">
                 <option th:value="'Będzei rodzaj obrazka SELECT'" th:text="SCAN"></option>
             </select>
