--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -46,7 +46,7 @@
                         </td>
                         <td class="pt-1 pb-1">
                             <a th:href="@{'/note/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
-                            <!--                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                            <a th:href="@{'/note/edit/' + ${note.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
                             <!--                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
                         </td>
                     </tr>
