--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -34,7 +34,7 @@
                     <strong>Series: </strong>
                     <span th:text="${note.series}"></span><br>
                     <strong>Making: </strong>
-                    <span th:text="${note.making}"></span><br>
+                    <span th:text="${note.makings.making}"></span><br>
                     <strong>Image Type</strong>
                     <span th:text="${note.imgType}"></span><br>
                     <strong>Quality: </strong>
