--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -53,6 +53,7 @@
                         <a class="dropdown-item" th:href="@{/pattern}">Pattern</a>
                         <a class="dropdown-item" th:href="@{/bought}">Bought</a>
                         <a class="dropdown-item" th:href="@{/making}">Making</a>
+                        <a class="dropdown-item" th:href="@{/quality}">Quality</a>
                     </div>
                 </li>
 <!--                <li class="nav-item">-->
