--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -38,7 +38,7 @@
                     <strong>Image Type</strong>
                     <span th:text="${note.imgType}"></span><br>
                     <strong>Quality: </strong>
-                    <span th:text="${note.quality}"></span><br>
+                    <span th:text="${note.qualities.quality}"></span><br>
                     <strong>Quantity: </strong>
                     <span th:text="${note.quantity}"></span>
                     <span th:text="${note.unitQuantity}"></span><br>
