--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -54,6 +54,7 @@
                         <a class="dropdown-item" th:href="@{/bought}">Bought</a>
                         <a class="dropdown-item" th:href="@{/making}">Making</a>
                         <a class="dropdown-item" th:href="@{/quality}">Quality</a>
+                        <a class="dropdown-item" th:href="@{/status}">Status</a>
                     </div>
                 </li>
 <!--                <li class="nav-item">-->
