--- a/src/main/resources/templates/note/_form.html
+++ b/src/main/resources/templates/note/_form.html
@@ -159,14 +159,19 @@
                 <span th:errors="*{height}" ></span>
             </div>
         </div>
-        <!--        TODO Dodać seleckta do making utwożć nową tabele Status   -->
         <div class="col-auto">
             <label class="m-0">Status</label>
-            <select class="form-control form-control-sm mb-2" th:field="*{status}">
-                <option th:value="'Będzei status Banknotu SELECT'" th:text="KOLEKCJA"></option>
+            <select class="form-control form-control-sm mb-2" th:field="*{statuses.id}">
+                    <span th:if="*{statuses.id == null}">
+                        <option value="">SELECT STATUS</option>
+                    </span>
+                <option th:each="status : ${statuses}"
+                        th:value="${status.id}"
+                        th:text="${status.status}">
+                </option>
             </select>
-            <div th:if="${#fields.hasErrors('status')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
-                <span th:errors="*{making}" ></span>
+            <div th:if="${#fields.hasErrors('statuses.id')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
+                <span th:errors="*{statuses.id}" ></span>
             </div>
         </div>
         <!--        TODO Dodać seleckta do making utwożć nową tabele Imaget Type   -->
