--- a/src/main/resources/templates/seting/imageType/index.html
+++ b/src/main/resources/templates/seting/imageType/index.html
@@ -9,7 +9,7 @@
 <body>
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">Image Type</h1>
-<!--        <a th:href="@{/typeImage/new}" class="btn btn-sm btn-primary">Add new Image Type</a>-->
+        <a th:href="@{/imageType/new}" class="btn btn-sm btn-primary">Add new Image Type</a>
         <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
             <tr>
@@ -21,7 +21,7 @@
             </tr>
             </thead>
             <tbody>
-            <Block th:each="type, i : ${imegeTypesDtos}">
+            <Block th:each="type, i : ${imegeTypeDtos}">
                 <tr>
                     <td th:text="${i.index + 1}" class="pt-1 pb-1"></td>
                     <td th:text="${type.type}" class="pt-1 pb-1"></td>
