dodano usuwanie image types

--- a/src/main/resources/templates/seting/imageType/index.html
+++ b/src/main/resources/templates/seting/imageType/index.html
@@ -33,7 +33,7 @@
                             <div th:replace="seting/imageType/_showModal :: showModal"></div>
                         </div>
                         <a th:href="@{'/imageType/edit/' + ${imgTyp.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>
-<!--                        <a th:href="@{'/imageType/delete/' + ${imgTyp.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">Delete</a>-->
+                        <a th:href="@{'/imageType/delete/' + ${imgTyp.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">Delete</a>
                     </td>
                 </tr>
             </Block>
