--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -36,7 +36,7 @@
                     <strong>Making: </strong>
                     <span th:text="${note.makings.making}"></span><br>
                     <strong>Image Type</strong>
-                    <span th:text="${note.imgType}"></span><br>
+                    <span th:text="${note.imageTypes.type}"></span><br>
                     <strong>Quality: </strong>
                     <span th:text="${note.qualities.quality}"></span><br>
                     <strong>Quantity: </strong>
