--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -39,6 +39,7 @@
                         <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
                         <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
                         <a class="dropdown-item" th:href="@{/note}">New Note</a>
+                        <a class="dropdown-item" th:href="@{/note/colection}">Colection</a>
 
                     </div>
                 </li>
