--- a/src/main/resources/templates/note/colection/country.html
+++ b/src/main/resources/templates/note/colection/country.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-       <H2>COUNTRIES COLECTION</H2>
+<!--       <H2>COUNTRIES COLECTION</H2>-->
+        <div class="container" style="text-align: center; margin-top: 15px">
+            <img th:src="@{'/images/continents/' + ${countryByStatusList[0].continentCode} + '.png'}" style="width: 100px"/><br>
+<!--            <span th:text="${countryByStatusList[0].continent}"></span>-->
+            <h1>country</h1>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <Block th:each="country : ${countryByStatusList}">
+                    <div class="col-sm-2" style="width: 170px">
+                        <div calss="container" style="margin: 15px; width: 160px">
+                            <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
+                            <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
+                        </div>
+                    </div>
+                </Block>
+            </div>
+        </div>
     </div>
 
 </body>
