Dodano sql wyszukujący currence według statusy i countrId poprawiono błąd wyświetlania banknotów w note show gdzie jest brak bought

--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -17,7 +17,9 @@
                     <strong>Date Buy: </strong>
                     <span th:text="${note.dateBuy}"></span><br>
                     <strong>Bought: </strong>
-                    <span th:text="${note.boughts.name}"></span><br>
+                    <span th:if=" ${note.boughts} != null">
+                        <span th:text="${note.boughts.name}"></span>
+                    </span><br>
                     <strong>Visible: </strong>
                     <span th:text="${note.visible}"></span><br>
                     <strong>Created: </strong>
