--- a/src/main/resources/templates/note/collection/country.html
+++ b/src/main/resources/templates/note/collection/country.html
@@ -20,8 +20,10 @@
                 <Block th:each="country : ${countryByStatusList}">
                     <div class="col-sm-2" style="width: 170px">
                         <div calss="container" style="margin: 15px; width: 160px">
-                            <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
-                            <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
+                            <a th:href="@{'/note/collection/currency/?selectCountryId=' + ${country.countryId}}">
+                                <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
+                                <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
+                            </a>
                         </div>
                     </div>
                 </Block>
