--- a/src/main/resources/static/css/my_style.css
+++ b/src/main/resources/static/css/my_style.css
@@ -24,6 +24,15 @@ body
     background-color: darkgray;
 }
 
+.currencyBox
+{
+    width: 250px;
+    min-height: 80px;
+    margin: 10px;
+    text-align: center;
+    background: darkgrey;
+}
+
 /*.stopka*/
 /*{*/
 /*    background-color: #bfbfbf;*/
