--- a/src/main/resources/templates/note/collection/currency.html
+++ b/src/main/resources/templates/note/collection/currency.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-       <H2>CURRENCY COLECTION</H2>
+       <H2 style="text-align: center">CURRENCY COLECTION</H2>
+        <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>
 
+        <div class="form-row align-items-center">
+            <th:block th:each="currency : ${currencyByStatusList}">
+                <a th:href="@{'/note/collection/notes/?selectCurrencyId=' + ${currency.currencyId}}">
+                    <div class="col-auto " style="width: 250px; min-height: 80px; margin: 10px; text-align: center; background: darkgrey; color: black">
+                        <span th:text="${currency.currencySeries}"></span><br>
+                        <span>[[${'(' + currency.total + ')'}]]</span>
+                    </div>
+                </a>
+            </th:block>
+        </div>
     </div>
 
 </body>
