--- a/src/main/resources/static/css/my_style.css
+++ b/src/main/resources/static/css/my_style.css
@@ -33,6 +33,10 @@ body
     background: darkgrey;
 }
 
+.testt
+{
+    text-align: center;
+}
 /*.stopka*/
 /*{*/
 /*    background-color: #bfbfbf;*/
