--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -10,7 +10,7 @@
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
     <link rel="stylesheet" th:href="@{/css/my_style.css}" type="text/css" />
-    <link rel="stylesheet" th:href="@{/css/note_style.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/notea_style.css}" type="text/css" />
 
 
 
