--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -10,9 +10,23 @@
 <body>
     <div layout:fragment="content" class="container">
        <H2 style="text-align: center" >NOTES COLECTION</H2>
+        <H4 th:text="${notes[0].currencies.currencySeries}" style="text-align: center" ></H4>
 <!--        <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>-->
 
         <div class="form-row align-items-center">
+            <div class="form-row align-items-center">
+                <th:block th:each="note : ${notes}">
+<!--                    <a th:href="@{'/note/collection/notes/?selectCurrencyId=' + ${note.id}}">-->
+                        <div class="col-auto note-box">
+                            <div style="display: flex; justify-content: center">
+                                <div th:replace="fragments/_image-midle :: image-midle(image = ${note.aversPath})"></div>
+                                <div th:replace="fragments/_image-midle :: image-midle(image = ${note.reversePath})"></div>
+                            </div>
+                            <span th:text="${note.denomination + ' ' + note.nameCurrency}"></span><br>
+                        </div>
+                    </a>
+                </th:block>
+            </div>
         </div>
     </div>
 
