Testy wyświetlania dala admina i usera

--- a/src/main/resources/templates/home/test.html
+++ b/src/main/resources/templates/home/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout}">
 <head>
     <title>About</title>
