--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -22,7 +22,14 @@
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${note.aversPath})"></div>
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${note.reversePath})"></div>
                             </div>
-                            <span th:text="${note.denomination + ' ' + note.nameCurrency}"></span><br>
+                            <div style="text-align: left">
+                                <span th:text="${note.denomination >= 1 ? #numbers.formatDecimal(note.denomination,1,0,'COMMA') :  #numbers.formatDecimal(note.denomination,1,2,'COMMA')} + ' ' + ${note.nameCurrency}"></span><br>
+                                <span th:text="${'Year: ' + note.itemDate}"></span>
+                                <div sec:authorize="hasAuthority('ADMIN')">
+<!--                                    This content is only shown to ADMIN.-->
+                                    <p th:text="${'Visible: ' + note.visible}"></p>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </th:block>
