--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -38,8 +38,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
                         <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
-                        <a class="dropdown-item" th:href="@{/note}">New Note</a>
+                        <a class="dropdown-item" th:href="@{/note}">Add Note</a>
                         <a class="dropdown-item" th:href="@{/note/collection}">Colection</a>
+                        <a class="dropdown-item" th:href="@{/note/newNotes}">New Notes</a>
 
                     </div>
                 </li>
