--- a/src/main/resources/templates/note/newNote/loc.html
+++ b/src/main/resources/templates/note/newNote/loc.html
@@ -11,7 +11,7 @@
     <h1 style="text-align: center">Note</h1>
 
         <div class="container">
-            <table class="table table-striped table-bordered table-hover table-sm">
+            <table class="table table-striped table-bordered table-hover table-sm" th:with="totalPrice=0">
                 <thead class="thead-dark">
                 <tr>
                     <!--                <th>CON</th>-->
@@ -21,12 +21,15 @@
                     <th>Currency</th>
                     <th>Price Buy</th>
                     <th>Quantity</th>
+                    <th>Sum</th>
+                    <th>Bought</th>
                     <th>Image</th>
 <!--                    <th style="width: 156px">Akcja</th>-->
                 </tr>
                 </thead>
                 <tbody>
                 <Block th:each="note, i : ${newNotesList}">
+                    <p th:with="totalPrice=${totalPrice + (note.priceBuy * note.quantity)}"></p>
                     <tr>
                         <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
                         <td th:text="${i.index +1}"></td>
@@ -35,6 +38,8 @@
                         <td th:text="${note.nameCurrency}"></td>
                         <td th:text="${#numbers.formatDecimal(note.priceBuy,1,2)}"></td>
                         <td th:text="${note.quantity}"></td>
+                        <td th:text="${#numbers.formatDecimal((note.priceBuy * note.quantity),1,2)}"></td>
+                        <td th:text="${note.bought}"></td>
                         <td class="p-0 m-0" style="width: 100px">
                             <div style="display: flex; justify-content: center">
                                 <div th:replace="fragments/_image-small :: image-small(image = ${note.aversPath})"></div>
@@ -50,6 +55,7 @@
                 </Block>
                 </tbody>
             </table>
+            <H1 th:text="${totalPrice}"></H1>
         </div>
     </div>
 </body>
