--- a/src/main/resources/static/css/noteb_style.css
+++ b/src/main/resources/static/css/noteb_style.css
@@ -13,6 +13,6 @@
     min-height: 80px;
     margin: 10px;
     text-align: center;
-    background: white;
+    background: darkgrey;
     color: black;
 }
